# BrickByBrick-AICA-Packages

./: ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  README.md  aica-package.toml  inital_promt.txt
.devcontainer/: devcontainer.json
source/brickbybrick_fix/: CMakeLists.txt  package.xml  requirements.txt  setup.cfg
source/brickbybrick_fix/brickbybrick_fix/: dropoff_line_extractor.py  exploration_navigator.py  jtc_command_generator.py  master_list_manager.py  vision_processor.py  yolo_object_detector.py
source/brickbybrick_fix/component_descriptions/: brickbybrick_fix_dropoff_line_extractor.json  brickbybrick_fix_exploration_navigator.json  brickbybrick_fix_jtc_command_generator.json  brickbybrick_fix_master_list_manager.json  brickbybrick_fix_pick_place_controller.json  brickbybrick_fix_pose_triggered_camera.json  brickbybrick_fix_vision_processor.json  brickbybrick_fix_yolo_object_detector.json
source/brickbybrick_fix/data/model/: Model_testing.py  Yolov11-training.py
source/brickbybrick_fix/data/model/Logs/: Benchmark_Master_Summary.csv
source/brickbybrick_fix/data/model/Logs/weights_m_standard_best/: Stats_weights_m_standard_best.txt
source/brickbybrick_fix/data/model/Logs/weights_m_standard_last/: Stats_weights_m_standard_last.txt
source/brickbybrick_fix/data/model/Logs/weights_n_optimized_best/: Stats_weights_n_optimized_best.txt
source/brickbybrick_fix/data/model/Logs/weights_n_optimized_last/: Stats_weights_n_optimized_last.txt
source/brickbybrick_fix/data/model/Logs/weights_s_optimized_best/: Stats_weights_s_optimized_best.txt
(+31 files in other folders)
