[options.entry_points]
python_components =
    brickbybrick_fix::ExplorationNavigator = brickbybrick_fix.exploration_navigator:ExplorationNavigator
    brickbybrick_fix::PoseTriggeredCamera = brickbybrick_fix.pose_triggered_camera:PoseTriggeredCamera
    brickbybrick_fix::YoloObjectDetector = brickbybrick_fix.yolo_object_detector:YoloObjectDetector
    brickbybrick_fix::DropoffLineExtractor = brickbybrick_fix.dropoff_line_extractor:DropoffLineExtractor
    brickbybrick_fix::MasterListManager = brickbybrick_fix.master_list_manager:MasterListManager
    brickbybrick_fix::PickPlaceController = brickbybrick_fix.pick_place_controller:PickPlaceController
    brickbybrick_fix::JtcCommandGenerator = brickbybrick_fix.jtc_command_generator:JtcCommandGenerator
    brickbybrick_fix::VisionProcessor = brickbybrick_fix.vision_processor:VisionProcessor
